# OCRMistral_Demo

./: .env  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  IMPLEMENTATION_PLAN.md  README.md  TODO.md  add_filename_column.py  app.py  batch_runner.py  docker-compose.yml  llm_extractor.py  mistral_ocr_engine.py  ocr_consistency_test.py  pyproject.toml  requirements.txt  reset_queue.py  schema.json  template.xml  template.xml.j2
backend/: DB_IMPROVEMENTS_SUMMARY.md  __init__.py  batch_runner.py  demo.db  requirements.txt  trace.py  trace_models.py  verify_db_improvements.py
backend/app/: __init__.py  db.py  db_models.py  main.py  trace_models.py
backend/config/: __init__.py  config.py  prompt_loader.py  scoring_config.json
config/: config.py
controller/: pipeline_controller.py
dashboard/: app.py
docs/: BACKEND_PIPELINE_DATABASE.md  Business_Repair_Loop_Implementation.md  DATABASE_PRESENTATION.md  FRONTEND_NETWORK.md  MIGRATION_NOTES.md  OCR_Pipeline_Bericht.md
extraction/: base_ocr.py  gemini_ocr_engine.py  mistral_ocr_engine.py
frontend/: next.config.ts  package-lock.json  package.json
llm/: base_llm.py  gemini.py  gemini_judge.py  gemini_llm.py  openai.py  openai_llm.py  openai_test.py  vertexai_test.py
pages/: 1_⚙️_System.py
prompts/: judge_repair.txt
schema/: models.py
tests/: __init__.py  conftest.py  debug_imports.py  test_api_endpoints.py  test_input_gate.py  test_ocr_schema.py  test_score_engine.py
utils/: prompt_loader.py
validation/: __init__.py  input_gate.py  judge.py  post_processing.py  score.py
(+48 files in other folders)
